<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/nav_login"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_viewpager"
            android:icon="@drawable/nav_home"
            android:title="@string/menu_viewpager" />
        <item
            android:id="@+id/nav_userinfo"
            android:icon="@drawable/nav_userinfo"
            android:title="@string/menu_userinfo" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/nav_search"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_article"
            android:icon="@drawable/nav_passage"
            android:title="@string/menu_article" />
    </group>
</menu>
