<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_login">

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.readnews.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_userinfo"
        android:name="com.example.readnews.ui.userinfo.UserInfoFragment"
        android:label="@string/menu_userinfo"
        tools:layout="@layout/fragment_userinfo">
    </fragment>

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.readnews.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search">
    </fragment>

    <fragment
        android:id="@+id/nav_viewpager"
        android:name="com.example.readnews.ui.news.ViewPagerFragment"
        android:label="@string/menu_viewpager">
    </fragment>

    <fragment
        android:id="@+id/nav_register"
        android:name="com.example.readnews.ui.login.RegisterFragment"
        android:label="@string/menu_register"
        tools:layout="@layout/fragment_register" >
    </fragment>
    <fragment
        android:id="@+id/nav_article"
        android:name="com.example.readnews.ui.article.ArticleFragment"
        android:label="@string/menu_article"
        tools:layout="@layout/fragment_article" />
    <fragment
        android:id="@+id/nav_add_article"
        android:name="com.example.readnews.ui.article.AddArticleFragment"
        android:label="@string/add_article" />
    <fragment
        android:id="@+id/nav_article_detail"
        android:name="com.example.readnews.ui.article.ArticleDetailFragment"
        android:label="@string/article_detail"
        tools:layout="@layout/fragment_article_detail" />
    <fragment
        android:id="@+id/nav_edit_article"
        android:name="com.example.readnews.ui.article.EditArticleFragment"
        android:label="修改文章"
        tools:layout="@layout/fragment_edit_article" />
    <fragment
        android:id="@+id/nav_news_detail"
        android:name="com.example.readnews.ui.news.NewsDetailFragment"
        android:label="新闻详情" />

</navigation>